<resources>
    <string name="app_name">Moodlet</string>
    <string name="title_history">History</string>
    <string name="title_friend_activity">Friend Activity</string>
    <string name="title_discover">Discover</string>
    <string name="title_map">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="password_too_short">Password must be at least 6 characters long</string>
    <string name="password_does_not_match">Passwords do not match</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="account_already_exists">Account with this email already exists</string>
    <string name="username_taken">Username is already taken</string>
    <string name="please_try_again_later">Something went wrong, please try again later</string>
    <string name="delete_failed">Failed to delete</string>
    <string name="delete_success">Successfully deleted!</string>
    <string name="search_hint">Search for users to follow</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
...
    <string name="social_situation">Social Situation</string>
    <string name="reason">Reason</string>
    <string name="filter_happy">Happy</string>
    <string name="filter_sad">Sad</string>
    <string name="filter_angry">Angry</string>
    <string name="filter_excited">Excited</string>
    <string name="filter_confused">Confused</string>
    <string name="filter_scared">Scared</string>
    <string name="filter_jealous">Jealous</string>
    <string name="reason_placeholder">None</string>
    <string name="location_label">Location</string>
    <string name="location_placeholder">None</string>
    <string name="location_checkbox">Use current location?</string>
    <string name="previous_location_checkbox">Use previous location?</string>
    <string name="location_hint">Search for a location</string>
    <string name="location_clear">(Clear)</string>
...
