...
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <!-- Edit Mode -->

            <!-- View Details -->
            <TextView
                android:id="@+id/moodDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:textSize="32pt"
...
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reasonDisplay" />

            <TextView
                android:id="@+id/locationDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
...
